# asciiplot

./: .coveragerc  .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  TODO.md  codecov.yaml  environment.yml  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build.yaml  workflow.yaml
asciichartpy_extended/: __init__.py  _axes.py  _config.py  _core.py  _params.py  _rendering.py  _sequences.py  _types.py  _utils.py  colors.py
asciichartpy_extended/_coloring/: __init__.py  colors.py
asciichartpy_extended/_components/: _axes.py  _sequences.py
asciichartpy_extended/_variable_encapsulations/: __init__.py  _config.py  _params.py
asciiplot/: __init__.py  _asciiization.py  _coloring.py  _config.py  _constants.py  _params.py  _rendering.py  _sequence_interpolation.py  _sequences.py  _type_aliases.py  _types.py  _utils.py
asciiplot/_chart/: __init__.py  enriching.py
asciiplot/_chart/grid/: __init__.py  cell.py  parcel.py
asciiplot/_chart/serialized/: __init__.py  layout_elements.py  x_axis_tick_row.py
asciiplot/_coloring/: __init__.py
asciiplot/_components/: _axes.py  _sequences.py  axes.py  sequences.py
asciiplot/_utils/: __init__.py  coloring.py  console.py  formatting.py  iterables.py  numerical_manipulation.py  sequences.py  type_aliases.py  types.py
asciiplot/_variable_encapsulations/: __init__.py  _config.py  _params.py
tests/: conftest.py  examine.py  inspect.py  test_chart_params.py  test_raising.py
tests/asciiplot/: test_asciiization.py  test_chart_grid_params.py  test_chart_params.py  test_params.py  test_raising.py
(+2 files in other folders)
